--- a/NOVA/Views/Home/Index.cshtml
+++ b/NOVA/Views/Home/Index.cshtml
@@ -98,14 +98,14 @@
 
             <div class="row">
                 <div class="col-lg-12 mb-4 order-0">
-                    <div class="col">
+                    @*<div class="col">
                         <iframe src="~/assets/happy-new-year2022/dist/index.html" height="350" width="100%"></iframe>
-                    </div>
+                    </div>*@
                     
-                    @*<div class="card">
+                    <div class="card">
                         <div class="d-flex align-items-end row">
                             <div class="col-sm-7">
-                                <div class="card-body text-center">
+                                <div class="card-body text-sm-left">
                                    
                                     @{ string merhaba = "";
                                         if (Session["Name"] == null)
@@ -129,7 +129,7 @@
         </div>
                             </div>
                         </div>
-                    </div>*@
+                    </div>
 
                     @{ var onlineusers = ViewBag.OnlineUsers; int a = 0;}
                     <div class="card col" style="display:unset">
