--- a/NOVA/Views/Shared/_Layout_personel.cshtml
+++ b/NOVA/Views/Shared/_Layout_personel.cshtml
@@ -110,6 +110,11 @@
                                     <div data-i18n="Without menu">Müşteri Takip</div>
                                 </a>
                             </li>
+                            <li class="menu-item" style="font-weight:normal;display: @ViewBag.DisplayZiyaretPlani">
+                                <a href="@Url.Action("ZiyaretPlanlari", "Satis")" class="menu-link">
+                                    <div data-i18n="Without menu">Ziyaret Planları</div>
+                                </a>
+                            </li>
                         </ul>
                     </li>
 
