--- a/NOVA/Views/Shared/_Layout_ziyaretci.cshtml
+++ b/NOVA/Views/Shared/_Layout_ziyaretci.cshtml
@@ -122,7 +122,7 @@
                                         <div data-i18n="Without menu">Kayıtlı Müşteriler</div>
                                     </a>
                                 </li>
-                                <li class="menu-item" style="font-weight:normal;display: @ViewBag.DisplayMusteriRaporu">
+                                <li class="menu-item" style="font-weight:normal;display: @ViewBag.DisplayZiyaretPlani">
                                     <a href="@Url.Action("ZiyaretPlanlari", "Satis")" class="menu-link">
                                         <div data-i18n="Without menu">Ziyaret Planları</div>
                                     </a>
