--- a/NOVA/Views/Satis/MusteriRaporu.cshtml
+++ b/NOVA/Views/Satis/MusteriRaporu.cshtml
@@ -1,173 +1,222 @@
 ﻿
-@{
-    ViewBag.Title = "MusteriRaporu";
-    Layout = "~/Views/Shared/_Layout_musteri_raporu.cshtml";
-}
 
+<script src="~/Scripts/jquery-3.6.1.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+<link rel="preconnect" href="https://fonts.googleapis.com" />
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+<link href="https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
+      rel="stylesheet" type="text/css" />
+<link href="\assets\boxicons-2.1.2\css\boxicons.css" rel="stylesheet" type="text/css" />
+<link href="\assets\boxicons-2.1.2\css\animations.css" rel="stylesheet" type="text/css" />
+<link href="\assets\boxicons-2.1.2\css\transformations.css" rel="stylesheet" type="text/css" />
+
+<!-- Core CSS -->
+<link rel="stylesheet" type="text/css" href="\assets\vendor\css\core.css" class="template-customizer-core-css" />
+<link rel="stylesheet" type="text/css" href="\assets\vendor\css\theme-default.css" class="template-customizer-theme-css" />
+<link rel="stylesheet" type="text/css" href="\assets\css\demo.css" />
+
+<!-- Vendors CSS -->
+<link rel="stylesheet" type="text/css" href="\assets\vendor\libs\perfect-scrollbar\perfect-scrollbar.css" />
+
+<link rel="stylesheet" type="text/css" href="\assets\vendor\libs/apex-charts/apex-charts.css" />
+
+<!-- Page CSS -->
+<!-- Helpers -->
+<script type="text/javascript" src="\assets\vendor\js\helpers.js"></script>
+
+<!--! Template customizer & Theme config files MUST be included after core stylesheets and helpers.js in the <head> section -->
+<!--? Config:  Mandatory theme config file contain global vars & default theme options, Set your preferred theme option in this file.  -->
+<script type="text/javascript" src="\assets\js\config.js"></script>
+<script src="/Scripts/jquery.validate.js" type='text/javascript'></script>
+<script src="/Scripts/jquery.validate.unobtrusive.js" type='text/javascript'></script>
 <link href="https://unpkg.com/bootstrap-table@1.21.2/dist/bootstrap-table.min.css" rel="stylesheet">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
 
 <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
 <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+<script src="https://unpkg.com/tableexport.jquery.plugin/tableExport.min.js"></script>
+<script src="https://unpkg.com/bootstrap-table@1.21.2/dist/bootstrap-table.min.js"></script>
+<script src="https://unpkg.com/bootstrap-table@1.21.2/dist/bootstrap-table-locale-all.min.js"></script>
+<script src="https://unpkg.com/bootstrap-table@1.21.2/dist/extensions/export/bootstrap-table-export.min.js"></script>
+<script src="https://unpkg.com/bootstrap-table@1.21.2/dist/extensions/filter-control/bootstrap-table-filter-control.min.js"></script>
+<script src="https://unpkg.com/bootstrap-table@1.21.2/dist/extensions/mobile/bootstrap-table-mobile.min.js"></script>
 <style>
     .menu1 {
         display: none;
     }
-    @@media screen and (max-width: 600px) {
 
+    .card-view {
+        border-bottom: 1px dashed gray;
+        margin-top: 2px;
+    }
+
+
+    .card-view-value {
+        margin-left: 5px;
+        white-space: normal;
+    }
+
+    .card-view-title {
+        border-right: 1px dashed gray;
+    }
+
+    #employeeTableWrapper2 .card-view-title, #employeeTableWrapper1 .card-view-title {
+        border-right: 1px dashed gray;
+        white-space: nowrap;
+        min-width: 50% !important;
+    }
+
+    @@media screen and (max-width: 600px) {
         .menu1 {
             display: inline-flex;
         }
+
         .menu2 {
             display: none;
         }
     }
 </style>
 
-<div class="container-fluid">
-
-    <div class="card">
-        <div class="card-header">
-            <div class="btn-group menu1">
-                <button type="button" class="btn btn-primary btn-icon rounded-pill dropdown-toggle hide-arrow" data-bs-toggle="dropdown" aria-expanded="false">
-                    <i class="bx bx-dots-vertical-rounded"></i>
-                </button>
-                <ul class="dropdown-menu dropdown-menu-end" style="">
-                    <li><a class="dropdown-item" onclick="change(1)">Tüm Müşteriler</a></li>
-                    <li>
-                        <hr class="dropdown-divider">
-                    </li>
-                    <li><a class="dropdown-item" onclick="change(2)">Planlanan</a></li>
-                    <li>
-                        <hr class="dropdown-divider">
-                    </li>
-                    <li><a class="dropdown-item" onclick="change(3)">Gerçekleşen</a></li>
-
-                </ul>
-            </div>
-
-            <div class="btn-group menu2" role="group" aria-label="Basic radio toggle button group">
-                <input type="radio" class="btn-check" onclick="change(1)" name="btnradio" id="btnradio1" checked="" autocomplete="off">
-                <label class="btn btn-outline-primary" for="btnradio1">Tüm Müşteriler</label>
-                <input type="radio" class="btn-check" onclick="change(2)" name="btnradio" id="btnradio2" autocomplete="off">
-                <label class="btn btn-outline-primary" for="btnradio2">Planlanan</label>
-                <input type="radio" class="btn-check" onclick="change(3)" name="btnradio" id="btnradio3" autocomplete="off">
-                <label class="btn btn-outline-primary" for="btnradio3">Gerçekleşen</label>
-
-            </div>
-        </div>
-        <div class="card-body" id="bdy1">
-
-
-            <div id="employeeTableWrapper" class="tableWrapper table-responsive">
-                <table id="table"
-                       class="table table-striped"
-                       data-pagination="true"
-                       data-show-toggle="true"
-                       data-search="true"
-                       data-toolbar="#toolbar"
-                       data-show-columns="true"
-                       data-show-columns-toggle-all="true"
-                       data-locale="tr-TR">
-                    <thead>
-                        <tr>
-                            <th data-field="MUSTERI_ADI" data-sortable="true">Müşteri Adı</th>
-                            <th data-field="MUSTERI_ADRES" data-sortable="true" data-formatter="adresFormatter">Müşteri Adres</th>
-                            <th data-field="MUSTERI_TEL1" data-sortable="true" data-formatter="telFormatter">Müşteri Telefon</th>
-                            <th data-field="MUSTERI_MAIL" data-sortable="true">Müşteri Mail</th>
-                            <th data-field="MUSTERI_SEKTOR" data-sortable="true">Müşteri Sektör</th>
-                            <th data-field="MUSTERI_NITELIK" data-sortable="true">Müşteri Nitelik</th>
-                            <th data-field="MUSTERI_NOTU" data-sortable="true">Müşteri Notu</th>
-                            <th data-field="PLASIYER" data-sortable="true">Plasiyer</th>
-                            <th data-field="KAYIT_TARIHI" data-sortable="true" data-formatter="teslimFormatter">Kayıt Tarihi</th>
-                        </tr>
-                    </thead>
-                </table>
-              
-
-            </div>
+<body style="background-color:white; overflow-y: hidden;">
 
 
 
-        </div>
-        <div class="card-body" id="bdy2">
+    <div class="btn-group menu1">
+        <button type="button" class="btn btn-primary btn-icon rounded-pill dropdown-toggle hide-arrow" data-bs-toggle="dropdown" aria-expanded="false">
+            <i class="bx bx-dots-vertical-rounded"></i>
+        </button>
+        <ul class="dropdown-menu dropdown-menu-end" style="">
+            <li><a class="dropdown-item" onclick="change(1)">Tüm Müşteriler</a></li>
+            <li>
+                <hr class="dropdown-divider">
+            </li>
+            <li><a class="dropdown-item" onclick="change(2)">Planlanan</a></li>
+            <li>
+                <hr class="dropdown-divider">
+            </li>
+            <li><a class="dropdown-item" onclick="change(3)">Gerçekleşen</a></li>
 
+        </ul>
+    </div>
 
-            <div id="employeeTableWrapper1" class="tableWrapper table-responsive">
-                
-                <table id="table2"
-                       class="table table-striped"
-                       data-pagination="true"
-                       data-show-toggle="true"
-                       data-search="true"
-                       data-toolbar="#toolbar"
-                       data-show-columns="true"
-                       data-show-columns-toggle-all="true"
-                       data-locale="tr-TR">
-                    <thead>
-                        <tr>
-                            <th data-field="MUSTERI_ID" data-sortable="true" data-formatter="musteriadiFormatter">Müşteri Adı</th>
-                            <th data-field="PLANLANAN_TARIH" data-sortable="true" data-formatter="planlananFormatter">Planlanan Tarih</th>
+    <div class="btn-group menu2" role="group" aria-label="Basic radio toggle button group">
+        <input type="radio" class="btn-check" onclick="change(1)" name="btnradio" id="btnradio1" checked="" autocomplete="off">
+        <label class="btn btn-outline-primary" for="btnradio1">Tüm Müşteriler</label>
+        <input type="radio" class="btn-check" onclick="change(2)" name="btnradio" id="btnradio2" autocomplete="off">
+        <label class="btn btn-outline-primary" for="btnradio2">Planlanan</label>
+        <input type="radio" class="btn-check" onclick="change(3)" name="btnradio" id="btnradio3" autocomplete="off">
+        <label class="btn btn-outline-primary" for="btnradio3">Gerçekleşen</label>
 
-                        </tr>
-                    </thead>
-                </table>
-
-            </div>
-
-
-
-        </div>
-        <div class="card-body" id="bdy3">
-
-
-            <div id="employeeTableWrapper2" class="tableWrapper table-responsive">
-                <table id="table3"
-                       class="table table-striped"
-                       data-pagination="true"
-                       data-show-toggle="true"
-                       data-search="true"
-                       data-toolbar="#toolbar"
-                       data-show-columns="true"
-                       data-show-columns-toggle-all="true"
-                       data-locale="tr-TR">
-                    <thead>
-                        <tr>
-                            <th data-field="MUSTERI_ID" data-sortable="true" data-formatter="musteriadiFormatter">Müşteri Adı</th>
-                            <th data-field="PLANLANAN_TARIH" data-sortable="true" data-formatter="planlananFormatter">Planlanan Tarih</th>
-                            <th data-field="GERCEKLESEN_TARIH" data-sortable="true" data-formatter="gerceklesenFormatter">Gerçekleşen Tarih</th>
-                        </tr>
-                    </thead>
-                </table>
-                
-
-            </div>
+    </div>
 
 
 
-        </div>
-        <script>
+
+    <div id="employeeTableWrapper" class="tableWrapper table-responsive">
+        <table id="table"
+               class="table table-striped"
+               data-pagination="true"
+               data-search="true"
+               data-show-columns="true"
+               data-show-columns-toggle-all="true"
+               data-locale="tr-TR"
+               data-mobile-responsive="true">
+            <thead>
+                <tr>
+                    <th data-field="MUSTERI_ADI" data-sortable="true">Müşteri Adı</th>
+                    <th data-field="MUSTERI_ADRES" data-sortable="true" data-formatter="adresFormatter">Müşteri Adres</th>
+                    <th data-field="MUSTERI_TEL1" data-sortable="true" data-formatter="telFormatter">Müşteri Telefon</th>
+                    <th data-field="MUSTERI_MAIL" data-sortable="true">Müşteri Mail</th>
+                    <th data-field="MUSTERI_SEKTOR" data-sortable="true">Müşteri Sektör</th>
+                    <th data-field="MUSTERI_NITELIK" data-sortable="true">Müşteri Nitelik</th>
+                    <th data-field="MUSTERI_NOTU" data-sortable="true">Müşteri Notu</th>
+                    <th data-field="PLASIYER" data-sortable="true">Plasiyer</th>
+                    <th data-field="KAYIT_TARIHI" data-sortable="true" data-formatter="teslimFormatter">Kayıt Tarihi</th>
+                </tr>
+            </thead>
+        </table>
+
+
+    </div>
+
+
+
+
+
+
+    <div id="employeeTableWrapper1" class="tableWrapper table-responsive">
+
+        <table id="table2"
+               class="table table-striped"
+               data-pagination="true"
+               data-search="true"
+               data-show-columns="true"
+               data-show-columns-toggle-all="true"
+               data-locale="tr-TR"
+               data-mobile-responsive="true">
+            <thead>
+                <tr>
+                    <th data-field="MUSTERI_ID" data-sortable="true" data-formatter="musteriadiFormatter">Müşteri Adı</th>
+                    <th data-field="PLANLANAN_TARIH" data-sortable="true" data-formatter="planlananFormatter">Planlanan Tarih</th>
+
+                </tr>
+            </thead>
+        </table>
+
+    </div>
+
+
+
+
+
+
+    <div id="employeeTableWrapper2" class="tableWrapper table-responsive">
+        <table id="table3"
+               class="table table-striped"
+               data-pagination="true"
+               data-search="true"
+               data-show-columns="true"
+               data-show-columns-toggle-all="true"
+               data-locale="tr-TR"
+               data-mobile-responsive="true">
+            <thead>
+                <tr>
+                    <th data-field="MUSTERI_ID" data-sortable="true" data-formatter="musteriadiFormatter">Müşteri Adı</th>
+                    <th data-field="PLANLANAN_TARIH" data-sortable="true" data-formatter="planlananFormatter">Planlanan Tarih</th>
+                    <th data-field="GERCEKLESEN_TARIH" data-sortable="true" data-formatter="gerceklesenFormatter">Gerçekleşen Tarih</th>
+                </tr>
+            </thead>
+        </table>
+
+
+    </div>
+
+
+
+
+    <script>
+        var r = null;
+        var r2 = null;
+        var username = null;
+        var userid = null;
             $(document).ready(function () {
-                $('#bdy2').hide();
-                $('#bdy3').hide();
+                $('#employeeTableWrapper1').hide();
+                $('#employeeTableWrapper2').hide();
                 })
-            var r = null;
-            var r2 = null;
-            var username = null;
-            var userid = null;
+
                 function change(value) {
                     if (value == 1) {
-                        $('#bdy2').hide();
-                        $('#bdy3').hide();
-                        $('#bdy1').show();
+                        $('#employeeTableWrapper1').hide();
+                        $('#employeeTableWrapper2').hide();
+                        $('#employeeTableWrapper').show();
                     } else if (value == 2) {
-                        $('#bdy1').hide();
-                        $('#bdy2').show();
-                        $('#bdy3').hide();
+                        $('#employeeTableWrapper').hide();
+                        $('#employeeTableWrapper1').show();
+                        $('#employeeTableWrapper2').hide();
                     } else {
-                        $('#bdy1').hide();
-                        $('#bdy2').hide();
-                        $('#bdy3').show();
+                        $('#employeeTableWrapper').hide();
+                        $('#employeeTableWrapper1').hide();
+                        $('#employeeTableWrapper2').show();
                     }
                 }
                 $.getJSON('@Url.Action("GetMusteriler","Satis")', function (data) {
@@ -182,8 +231,7 @@
                         r = result;
                         $table.bootstrapTable({ data: JSON.parse(r).filter(x => x.PLASIYER == username)  })
                     })
-                })
-            $.getJSON('@Url.Action("GetRandevu", "Satis")', function (data) {
+                     $.getJSON('@Url.Action("GetRandevu", "Satis")', function (data) {
 
 
                 }).done(function (result) {
@@ -193,7 +241,7 @@
                     $(function () {
                         r2 = result;
                         var sor1 = JSON.parse(r2).filter(x => x.KAYIT_YAPAN_KULLANICI_ID == parseInt(userid) && x.GERCEKLESEN_TARIH == null);
-                       
+
                         if (sor1 != null) {
                             $table2.bootstrapTable({ data: sor1 })
                         }
@@ -201,9 +249,11 @@
                         if (sor2 != null) {
                             $table3.bootstrapTable({ data: sor2 })
                         }
-                        
+
                     })
                 })
+                })
+
 
             function teslimFormatter(value, row, index) {
                 var old = value.split('T')[0];
@@ -214,7 +264,7 @@
                 return newdate;
             }
             function adresFormatter(value, row, index) {
-               
+
                 return row.MUSTERI_IL + ", " + row.MUSTERI_ILCE + ", " + row.MUSTERI_MAHALLE + ", " + value;
             }
             function telFormatter(value, row, index) {
@@ -238,12 +288,12 @@
                 return newdate;
             }
             function musteriadiFormatter(value, row, index) {
-                
+
                 return JSON.parse(r).filter(x => x.MUSTERI_ID == value)[0].MUSTERI_ADI;
             }
-        </script>
-    </div>
-</div>
+    </script>
+</body>
+
 
 
 
