--- a/NOVA/Views/Satis/MusteriRaporuOzel.cshtml
+++ b/NOVA/Views/Satis/MusteriRaporuOzel.cshtml
@@ -1,8 +1,5 @@
 ﻿
-@{
-    ViewBag.Title = "MusteriRaporuOzel";
-    Layout = "~/Views/Shared/_Layout_musteri_raporu_ozel.cshtml";
-}
+
 
 <link href="https://unpkg.com/bootstrap-table@1.21.2/dist/bootstrap-table.min.css" rel="stylesheet">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
@@ -12,12 +9,55 @@
 <link href="https://unpkg.com/bootstrap-table@1.21.2/dist/extensions/sticky-header/bootstrap-table-sticky-header.css" rel="stylesheet">
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
 <script src="https://unpkg.com/bootstrap-table@1.21.2/dist/extensions/sticky-header/bootstrap-table-sticky-header.min.js"></script>
+<script src="~/Scripts/jquery-3.6.1.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+<link rel="preconnect" href="https://fonts.googleapis.com" />
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+<link href="https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
+      rel="stylesheet" type="text/css" />
+<link href="\assets\boxicons-2.1.2\css\boxicons.css" rel="stylesheet" type="text/css" />
+<link href="\assets\boxicons-2.1.2\css\animations.css" rel="stylesheet" type="text/css" />
+<link href="\assets\boxicons-2.1.2\css\transformations.css" rel="stylesheet" type="text/css" />
+
+<!-- Core CSS -->
+<link rel="stylesheet" type="text/css" href="\assets\vendor\css\core.css" class="template-customizer-core-css" />
+<link rel="stylesheet" type="text/css" href="\assets\vendor\css\theme-default.css" class="template-customizer-theme-css" />
+<link rel="stylesheet" type="text/css" href="\assets\css\demo.css" />
+
+<!-- Vendors CSS -->
+<link rel="stylesheet" type="text/css" href="\assets\vendor\libs\perfect-scrollbar\perfect-scrollbar.css" />
+
+<link rel="stylesheet" type="text/css" href="\assets\vendor\libs/apex-charts/apex-charts.css" />
+
+<!-- Page CSS -->
+<!-- Helpers -->
+<script type="text/javascript" src="\assets\vendor\js\helpers.js"></script>
+
+<!--! Template customizer & Theme config files MUST be included after core stylesheets and helpers.js in the <head> section -->
+<!--? Config:  Mandatory theme config file contain global vars & default theme options, Set your preferred theme option in this file.  -->
+<script type="text/javascript" src="\assets\js\config.js"></script>
+<script src="/Scripts/jquery.validate.js" type='text/javascript'></script>
+<script src="/Scripts/jquery.validate.unobtrusive.js" type='text/javascript'></script>
+<script>
+    var user = null;
+    var sor2 = null;
+    var degismez = null;
+
+
+</script>
+<script src="https://unpkg.com/tableexport.jquery.plugin/tableExport.min.js"></script>
+<script src="https://unpkg.com/bootstrap-table@1.21.2/dist/bootstrap-table.min.js"></script>
+<script src="https://unpkg.com/bootstrap-table@1.21.2/dist/bootstrap-table-locale-all.min.js"></script>
+<script src="https://unpkg.com/bootstrap-table@1.21.2/dist/extensions/export/bootstrap-table-export.min.js"></script>
+<script src="https://unpkg.com/bootstrap-table@1.21.2/dist/extensions/filter-control/bootstrap-table-filter-control.min.js"></script>
+<script src="https://unpkg.com/bootstrap-table@1.21.2/dist/extensions/mobile/bootstrap-table-mobile.min.js"></script>
 <style>
-   
-    
+
+
     .menu1 {
         display: none;
     }
+
     .card-view {
         border-bottom: 1px dashed gray;
         margin-top: 2px;
@@ -26,16 +66,19 @@
 
     .card-view-value {
         margin-left: 5px;
-        white-space: normal;
+        word-break:break-word;
     }
+
     .card-view-title {
         border-right: 1px dashed gray;
     }
+
     #bdy3 .card-view-title, #bdy2 .card-view-title {
         border-right: 1px dashed gray;
         white-space: nowrap;
         min-width: 50% !important;
     }
+
     @@media screen and (max-width: 600px) {
         .menu1 {
             display: inline-flex;
@@ -47,10 +90,10 @@
     }
 </style>
 
-<div class="container-fluid">
+<div class="container-fluid" style="background-color:white">
 
-    <div class="card">
-        <div class="card-header">
+  
+     
             <div class="btn-group menu1">
                 <button type="button" class="btn btn-primary btn-icon rounded-pill dropdown-toggle hide-arrow" data-bs-toggle="dropdown" aria-expanded="false">
                     <i class="bx bx-dots-vertical-rounded"></i>
@@ -85,54 +128,7 @@
             </div>
 
 
-            <div class="avatar avatar-online float-end" data-bs-toggle="dropdown">
-                @{
-                    string s = Request.Cookies["Id"].Value + ".png?" + DateTime.Now.Ticks.ToString();
-                }
-                <object data="/assets/img/avatars/@s" type="image/png" class="w-px-40 h-auto rounded-circle">
-                    <img src="/assets/img/avatars/7.png" class="w-px-40 h-auto rounded-circle">
-                </object>
-            </div>
-
-            <ul class="dropdown-menu dropdown-menu-end">
-                <li>
-                    <a class="dropdown-item" href='@Url.Action("Index","Profil")'>
-                        <div class="d-flex">
-                            <div class="flex-shrink-0 me-3">
-                                <div class="avatar avatar-online">
-                                    <object data="/assets/img/avatars/@s" type="image/png" class="w-px-40 h-auto rounded-circle">
-                                        <img src="/assets/img/avatars/7.png" class="w-px-40 h-auto rounded-circle">
-                                    </object>
-                                </div>
-                            </div>
-                            <div class="flex-grow-1">
-                                @if (@Request.Cookies["Name"] != null)
-                                {
-                                    <span class="fw-semibold d-block">@Request.Cookies["Name"].Value</span>
-                                    <small class="text-muted">Yetki: @Request.Cookies["RoleName"].Value</small>
-                                }
-                                else
-                                {
-                                    <span class="fw-semibold d-block">Test</span>
-                                    <small class="text-muted">Yetki: Test</small>
-                                }
-
-                            </div>
-                        </div>
-                    </a>
-                </li>
-
-                <li>
-                    <a href="javascript:void(0);" class="dropdown-item" data-bs-toggle="modal"
-                       data-bs-target="#cikis">
-                        <i class="bx bx-power-off me-2"></i>
-                        <span class="align-middle">Oturumu Kapat</span>
-                    </a>
-                </li>
-            </ul>
-
-        </div>
-        <div class="card-body" id="bdy1">
+        
 
 
             <div id="employeeTableWrapper" class="tableWrapper table-responsive">
@@ -141,7 +137,8 @@
                        data-pagination="true"
                        data-buttons-order="['paginationSwitch', 'columns', 'filterTable']"
                        data-search="true"
-                       data-show-toggle="true"
+                       data-page-size="2"
+                       data-pagination-Successively-Size="2"
                        data-show-columns="true"
                        data-sticky-header="true"
                        data-export-data-type="all"
@@ -172,8 +169,8 @@
 
 
 
-        </div>
-        <div class="card-body" id="bdy2">
+     
+       
 
 
             <div id="employeeTableWrapper1" class="tableWrapper table-responsive">
@@ -183,7 +180,6 @@
                        data-pagination="true"
                        data-buttons-order="['paginationSwitch', 'columns', 'filterTable']"
                        data-search="true"
-                       data-show-toggle="true"
                        data-show-columns="true"
                        data-export-data-type="all"
                        data-export-types="['excel']"
@@ -206,8 +202,8 @@
 
 
 
-        </div>
-        <div class="card-body" id="bdy3">
+
+      
 
 
             <div id="employeeTableWrapper2" class="tableWrapper table-responsive">
@@ -219,7 +215,6 @@
                        data-show-columns="true"
                        data-export-data-type="all"
                        data-export-types="['excel']"
-                       data-show-toggle="true"
                        data-show-export="true"
                        data-locale="tr-TR"
                        data-mobile-responsive="true">
@@ -238,8 +233,8 @@
 
 
 
-        </div>
-        <div class="card-body" id="bdy4">
+      
+ 
 
 
             <div id="employeeTableWrapper3" class="tableWrapper table-responsive">
@@ -251,7 +246,6 @@
                        data-show-columns="true"
                        data-export-data-type="all"
                        data-export-types="['excel']"
-                       data-show-toggle="true"
                        data-show-export="true"
                        data-locale="tr-TR"
                        data-mobile-responsive="true">
@@ -271,7 +265,7 @@
 
 
 
-        </div>
+     
         <script>
             var type = 'fa'
 
@@ -311,9 +305,9 @@
             }
 
             $(document).ready(function () {
-                $('#bdy2').hide();
-                $('#bdy3').hide();
-                $('#bdy4').hide();
+                $('#employeeTableWrapper1').hide();
+                $('#employeeTableWrapper2').hide();
+                $('#employeeTableWrapper3').hide();
 
                 getUserAsync().then(function (data) {
                     user = JSON.parse(data);
@@ -325,39 +319,39 @@
                     })
                 })
 
-                     
 
-               
-               
+
+
+
 
             })
 
                 function change(value) {
                     if (value == 1) {
-                        $('#bdy4').hide();
-                        $('#bdy2').hide();
-                        $('#bdy3').hide();
-                        $('#bdy1').show();
+                        $('#employeeTableWrapper3').hide();
+                        $('#employeeTableWrapper1').hide();
+                        $('#employeeTableWrapper2').hide();
+                        $('#employeeTableWrapper').show();
                         getMusterilerAsync().then(function (data) {
                             var musteriler = JSON.parse(data);
 
                             $('#table').bootstrapTable({ data: musteriler });
                         })
                     } else if (value == 2) {
-                        $('#bdy1').hide();
-                        $('#bdy2').show();
+                        $('#employeeTableWrapper').hide();
+                        $('#employeeTableWrapper1').show();
                         getRandevuAsync().then(function (data) {
                             var randevular = JSON.parse(data).filter(x => x.GERCEKLESEN_TARIH == null);
 
                             $('#table2').bootstrapTable({ data: randevular });
                         })
-                        $('#bdy3').hide();
-                        $('#bdy4').hide();
+                        $('#employeeTableWrapper2').hide();
+                        $('#employeeTableWrapper3').hide();
                     } else if (value == 3) {
-                        $('#bdy1').hide();
-                        $('#bdy2').hide();
-                        $('#bdy3').show();
-                        $('#bdy4').hide();
+                        $('#employeeTableWrapper').hide();
+                        $('#employeeTableWrapper1').hide();
+                        $('#employeeTableWrapper2').show();
+                        $('#employeeTableWrapper3').hide();
                         $.getJSON('@Url.Action("GetRandevu", "Satis")', function (data) {
 
 
@@ -373,15 +367,15 @@
                             })
                         })
                     } else {
-                        $('#bdy1').hide();
-                        $('#bdy2').hide();
+                        $('#employeeTableWrapper').hide();
+                        $('#employeeTableWrapper1').hide();
                         getUrunlerAsync().then(function (data) {
                             var urunler = JSON.parse(data);
 
                             $('#table4').bootstrapTable({ data: urunler });
                         })
-                        $('#bdy3').hide();
-                        $('#bdy4').show();
+                        $('#employeeTableWrapper2').hide();
+                        $('#employeeTableWrapper3').show();
                     }
                 }
 
@@ -400,7 +394,7 @@
 
                 var a = user.filter(x => x.USER_NAME == value);
                 var y = a[0].USER_FIRSTNAME + " " + a[0].USER_LASTNAME;
-                
+
                 return y;
 
 
@@ -416,7 +410,7 @@
                 if (value == null) {
                     value = "";
                 }
-                return "<textarea disabled>"+value+"</textarea>";
+                return "<textarea cols='17' disabled>"+value+"</textarea>";
             }
             function adresFormatter(value, row, index) {
                 var mahalle = row.MUSTERI_MAHALLE == null ? "-" :row.MUSTERI_MAHALLE ;
@@ -470,7 +464,7 @@
 
 
         </script>
-    </div>
+    
 </div>
 
 
