--- a/NOVA/Views/Shared/_Layout_ZiyaretPlanlari.cshtml
+++ b/NOVA/Views/Shared/_Layout_ZiyaretPlanlari.cshtml
@@ -39,8 +39,7 @@
     <script type="text/javascript" src="\assets\js\config.js"></script>
     <script src="/Scripts/jquery.validate.js" type='text/javascript'></script>
     <script src="/Scripts/jquery.validate.unobtrusive.js" type='text/javascript'></script>
-
-    <script src="~/fullcalendar-scheduler-6.0.1/dist/index.global.min.js"></script>
+    <script src="~/fullcalendar-scheduler-6.0.1/dist/index.global.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/i18n/tr.js"></script>
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
@@ -57,7 +56,14 @@
             margin: 0;
             background-color: #D0E0E3;
         }
-
+        .fc-button {
+            background-color: #48483E !important;
+            background-image: none;
+            
+        }
+            .fc-button:hover {
+                background:#6d6d65 !important;
+            }
             .accordion-button:not(.collapsed) {
                 color: #566a7f;
                 background-color: #D0E0E3;
@@ -69,39 +75,29 @@
         }
 
        
-        span.deleteicon {
-            position: relative;
-            display: inline-flex;
-            align-items: center;
-        }
-
-        span.deleteicon span {
-            position: absolute;
-            display: block;
-            right: 3px;
-            width: 15px;
-            height: 15px;
-            border-radius: 50%;
-            color: #fff;
-            background-color: #ccc;
-            font: 13px monospace;
-            text-align: center;
-            line-height: 1em;
-            cursor: pointer;
-        }
+     
 
         span.deleteicon input {
             padding-right: 18px;
             box-sizing: border-box;
         }
-        .fc-event .fc-event-main {
+        #external-events .fc-event .fc-h-event .fc-event-main {
             position: relative;
             z-index: 2;
             padding: 2px 20px;
             background-color: #697FC2;
             border-radius: 0.375rem;
         }
-
+        #external-events1 .fc-event .fc-event-main {
+            position: relative;
+            z-index: 2;
+            padding: 2px 20px;
+            background-color: #697FC2;
+            border-radius: 0.375rem;
+        }
+        .fc-v-event{
+            border:hidden;
+        }
         #external-events .fc-event {
             cursor: move;
             margin: 3px 0;
@@ -112,11 +108,7 @@
             margin: 3px 0;
         }
 
-        .fc-h-event {
-            background-color: transparent;
-            border: 1px solid transparent;
-            display: block;
-        }
+        
 
         .fc-event-main {
             padding: 0 5px;
@@ -304,6 +296,7 @@
         var calendar = null
         var drag = null;
         var gerceklesentarih = null;
+       
         document.addEventListener('DOMContentLoaded', function () {
             var Calendar = FullCalendar.Calendar;
             var Draggable = FullCalendar.Draggable;
@@ -385,7 +378,7 @@
                     } else {
                         var txt = "Ziyaret planını " + d.split(' ')[0] + " " + (d.split(' ')[1].split(':').slice(0, 2)).toString().replace(',', ':') + " olarak güncellemek istediğinize emin misiniz?";
                     }
-                    
+
                     Swal.fire({
                         title: 'Onay',
                         icon: 'question',
@@ -397,7 +390,7 @@
                         denyButtonText: `Güncelleme!`,
                     }).then((result) => {
                         var url = "http://192.168.2.13:83/api/musteri/randevu/" + parseInt(date.event.extendedProps.inckey);
-                       
+
                         $.get(url, function (data) {
                             var veri = data;
                             if (veri[0].GERCEKLESEN_TARIH == null) {
@@ -406,7 +399,7 @@
                                 s = JSON.stringify({ "INCKEY": parseInt(date.event.extendedProps.inckey), "MUSTERI_ID": parseInt(date.event.id), "RANDEVU_NOTU": veri[0].RANDEVU_NOTU, "GERCEKLESEN_TARIH": (date.event.start).toLocaleString("tr-TR"), "PLANLANAN_TARIH": veri[0].PLANLANAN_TARIH });
                             }
                         }).done(function () {
-                          
+
                             if (result.isConfirmed) {
                             $.ajax({
                                 type: 'POST',
@@ -492,7 +485,18 @@
                 dateClick: function (info) {
                     calendar.changeView('timeGridDay', info.dateStr);
                 },
-                themeSystem: 'bootstrap5'
+                themeSystem: 'bootstrap5',
+                buttonText: {
+                    today: 'Bugün',
+                    month: 'Ay',
+                    week: 'Hafta',
+                    day: 'Gün',
+                    list: 'Liste',
+                    listMonth: 'Aylık Liste',
+                    listYear: 'Yıllık Liste',
+                    listWeek: 'Haftalık Liste',
+                    listDay: 'Günlük Liste'
+                },
             })
 
 
@@ -583,7 +587,7 @@
                                         <div data-i18n="Without menu">Kayıtlı Müşteriler</div>
                                     </a>
                                 </li>
-                                <li class="menu-item active" style="font-weight:normal;display: @ViewBag.DisplayMusteriRaporu">
+                                <li class="menu-item active" style="font-weight:normal;display: @ViewBag.DisplayZiyaretPlani">
                                     <a href="@Url.Action("ZiyaretPlanlari", "Satis")" class="menu-link">
                                         <div data-i18n="Without menu">Ziyaret Planları</div>
                                     </a>
