--- a/NOVA/Views/Shared/_Layout_anasayfa.cshtml
+++ b/NOVA/Views/Shared/_Layout_anasayfa.cshtml
@@ -113,22 +113,8 @@
                                     <div data-i18n="Without menu">Fabrika Stok</div>
                                 </a>
                             </li>
-                            <li class="menu-item" style="font-weight:normal;display: @ViewBag.DisplayZiyaretKaydi">
-                                <a href="@Url.Action("ZiyaretKaydiListesi", "Satis")" class="menu-link">
-                                    <div data-i18n="Without menu">Müşteri Takip</div>
-                                </a>
-                            </li>
-                            <li class="menu-item" style="font-weight:normal;display: @ViewBag.DisplayMusteriRaporu">
-                                <a href="@Url.Action("MusteriRaporu", "Satis")" class="menu-link">
-                                    <div data-i18n="Without menu">Kayıtlı Müşterilerim</div>
-                                </a>
-                            </li>
-                            <li class="menu-item" style="font-weight:normal;display: @ViewBag.DisplayMusteriOzel">
-                                <a href="@Url.Action("MusteriRaporuOzel", "Satis")" class="menu-link">
-                                    <div data-i18n="Without menu">Kayıtlı Müşteriler</div>
-                                </a>
-                            </li>
-                            <li class="menu-item" style="font-weight:normal;display: @ViewBag.DisplayMusteriRaporu">
+                            
+                            <li class="menu-item" style="font-weight:normal;display: @ViewBag.DisplayZiyaretPlani">
                                 <a href="@Url.Action("ZiyaretPlanlari", "Satis")" class="menu-link">
                                     <div data-i18n="Without menu">Ziyaret Planları</div>
                                 </a>
