--- a/NOVA/Views/Shared/_Layout_sevkiyat.cshtml
+++ b/NOVA/Views/Shared/_Layout_sevkiyat.cshtml
@@ -107,9 +107,10 @@
                                         <div data-i18n="Without menu">Fabrika Stok</div>
                                     </a>
                                 </li>
-                                <li class="menu-item" style="font-weight:normal;display: @ViewBag.DisplayZiyaretKaydi">
-                                    <a href="@Url.Action("ZiyaretKaydiListesi", "Satis")" class="menu-link">
-                                        <div data-i18n="Without menu">Müşteri Takip</div>
+                               
+                                <li class="menu-item" style="font-weight:normal;display: @ViewBag.DisplayZiyaretPlani">
+                                    <a href="@Url.Action("ZiyaretPlanlari", "Satis")" class="menu-link">
+                                        <div data-i18n="Without menu">Ziyaret Planları</div>
                                     </a>
                                 </li>
                             </ul>
