--- a/NOVA/Views/Shared/_Layout_ZiyaretPlanlari.cshtml
+++ b/NOVA/Views/Shared/_Layout_ZiyaretPlanlari.cshtml
@@ -45,12 +45,7 @@
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <style>
 
-        html, body {
-            margin: 0;
-            padding: 0;
-            font-family: Calibri;
-            font-size: 14px;
-        }
+        
 
         .accordion-button {
             margin: 0;
@@ -81,7 +76,7 @@
             padding-right: 18px;
             box-sizing: border-box;
         }
-        #external-events .fc-event .fc-h-event .fc-event-main {
+        #external-events .fc-event .fc-event-main {
             position: relative;
             z-index: 2;
             padding: 2px 20px;
@@ -572,24 +567,10 @@
                                         <div data-i18n="Without menu">Fabrika Stok</div>
                                     </a>
                                 </li>
-                                <li class="menu-item" style="font-weight:normal;display: @ViewBag.DisplayZiyaretKaydi">
-                                    <a href="@Url.Action("ZiyaretKaydiListesi", "Satis")" class="menu-link">
-                                        <div data-i18n="Without menu">Müşteri Takip</div>
-                                    </a>
-                                </li>
-                                <li class="menu-item" style="font-weight:normal;display: @ViewBag.DisplayMusteriRaporu">
-                                    <a href="@Url.Action("MusteriRaporu", "Satis")" class="menu-link">
-                                        <div data-i18n="Without menu">Kayıtlı Müşterilerim</div>
-                                    </a>
-                                </li>
-                                <li class="menu-item" style="font-weight:normal;display: @ViewBag.DisplayMusteriOzel">
-                                    <a href="@Url.Action("MusteriRaporuOzel", "Satis")" class="menu-link">
-                                        <div data-i18n="Without menu">Kayıtlı Müşteriler</div>
-                                    </a>
-                                </li>
+                                
                                 <li class="menu-item active" style="font-weight:normal;display: @ViewBag.DisplayZiyaretPlani">
                                     <a href="@Url.Action("ZiyaretPlanlari", "Satis")" class="menu-link">
-                                        <div data-i18n="Without menu">Ziyaret Planları</div>
+                                        <div data-i18n="Without menu">Müşteri İlişkileri Yönetimi</div>
                                     </a>
                                 </li>
                             </ul>
