--- a/NOVA/Views/Shared/_Layout_anasayfa.cshtml
+++ b/NOVA/Views/Shared/_Layout_anasayfa.cshtml
@@ -113,10 +113,10 @@
                                     <div data-i18n="Without menu">Fabrika Stok</div>
                                 </a>
                             </li>
-                            
+
                             <li class="menu-item" style="font-weight:normal;display: @ViewBag.DisplayZiyaretPlani">
                                 <a href="@Url.Action("ZiyaretPlanlari", "Satis")" class="menu-link">
-                                    <div data-i18n="Without menu">Ziyaret Planları</div>
+                                    <div data-i18n="Without menu">Müşteri İlişkileri Yönetimi</div>
                                 </a>
                             </li>
                         </ul>
