--- a/NOVA/Views/Shared/_Layout_inside.cshtml
+++ b/NOVA/Views/Shared/_Layout_inside.cshtml
@@ -120,7 +120,7 @@
                                    
                                     <li class="menu-item" style="font-weight:normal;display: @ViewBag.DisplayZiyaretPlani">
                                         <a href="@Url.Action("ZiyaretPlanlari", "Satis")" class="menu-link">
-                                            <div data-i18n="Without menu">Ziyaret Planları</div>
+                                            <div data-i18n="Without menu">Müşteri İlişkileri Yönetimi</div>
                                         </a>
                                     </li>
                                 </ul>
@@ -294,7 +294,7 @@
                                        
                                         <li class="menu-item" style="font-weight:normal;display: @ViewBag.DisplayZiyaretPlani">
                                             <a href="@Url.Action("ZiyaretPlanlari", "Satis")" class="menu-link">
-                                                <div data-i18n="Without menu">Ziyaret Planları</div>
+                                                <div data-i18n="Without menu">Müşteri İlişkileri Yönetimi</div>
                                             </a>
                                         </li>
                                     </ul>
@@ -468,7 +468,7 @@
                                         
                                         <li class="menu-item" style="font-weight:normal;display: @ViewBag.DisplayZiyaretPlani">
                                             <a href="@Url.Action("ZiyaretPlanlari", "Satis")" class="menu-link">
-                                                <div data-i18n="Without menu">Ziyaret Planları</div>
+                                                <div data-i18n="Without menu">Müşteri İlişkileri Yönetimi</div>
                                             </a>
                                         </li>
                                     </ul>
@@ -646,7 +646,7 @@
                                     
                                     <li class="menu-item" style="font-weight:normal;display: @ViewBag.DisplayZiyaretPlani">
                                         <a href="@Url.Action("ZiyaretPlanlari", "Satis")" class="menu-link">
-                                            <div data-i18n="Without menu">Ziyaret Planları</div>
+                                            <div data-i18n="Without menu">Müşteri İlişkileri Yönetimi</div>
                                         </a>
                                     </li>
                                 </ul>
@@ -818,7 +818,7 @@
                                     
                                     <li class="menu-item" style="font-weight:normal;display: @ViewBag.DisplayZiyaretPlani">
                                         <a href="@Url.Action("ZiyaretPlanlari", "Satis")" class="menu-link">
-                                            <div data-i18n="Without menu">Ziyaret Planları</div>
+                                            <div data-i18n="Without menu">Müşteri İlişkileri Yönetimi</div>
                                         </a>
                                     </li>
                                 </ul>
