--- a/NOVA/Views/Shared/_Layout_ziyaretci.cshtml
+++ b/NOVA/Views/Shared/_Layout_ziyaretci.cshtml
@@ -124,7 +124,7 @@
                                 </li>
                                 <li class="menu-item" style="font-weight:normal;display: @ViewBag.DisplayZiyaretPlani">
                                     <a href="@Url.Action("ZiyaretPlanlari", "Satis")" class="menu-link">
-                                        <div data-i18n="Without menu">Ziyaret Planları</div>
+                                        <div data-i18n="Without menu">Müşteri İlişkileri Yönetimi</div>
                                     </a>
                                 </li>
                             </ul>
